# CppVerbalExpressions17

./: CMakeLists.txt  README.md  example.cpp  verbalexpressions.hpp
